--- a/DriverApp/ColdStartChallenge.DriverApp/ColdStartChallenge.DriverApp/Pages/DashboardPage.xaml
+++ b/DriverApp/ColdStartChallenge.DriverApp/ColdStartChallenge.DriverApp/Pages/DashboardPage.xaml
@@ -92,16 +92,23 @@
                     </BindableLayout.ItemTemplate>
                 </StackLayout>
             </StackLayout>
-            <!--<RefreshView Command="{Binding RefreshCommand}" IsRefreshing="{Binding IsRefreshing}"
+            <RefreshView Command="{Binding RefreshCommand}" IsRefreshing="{Binding IsRefreshing}"
                          Grid.Row="1">
                 <CollectionView x:Name="DeliveryList"
                                 Margin="0,10,0,10"
-                                ItemsSource="*** BIND TO CORRECT PROPERTY ***"
-                                SelectedItem="*** BIND TO CORRECT PROPERTY ***"
-                                SelectionChangedCommand="*** BIND TO CORRECT PROPERTY ***"
-                                SelectionMode="*** BIND TO CORRECT PROPERTY ***">
+                                ItemsSource="{Binding Orders}"
+                                SelectedItem="{Binding SelectedOrder}"
+                                SelectionChangedCommand="{Binding ItemSelectedCommand}"
+                                SelectionMode="{Binding SelectionMode}">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Label Grid.Column="1"
+                               Text="{Binding User}"
+                               FontAttributes="Bold" />
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
                 </CollectionView>
-            </RefreshView>-->
+            </RefreshView>
             <controls:LoadingView IsBusy="{Binding IsBusy}" />
         </Grid>
     </ContentPage.Content>
