--- a/DriverApp/ColdStartChallenge.DriverApp/ColdStartChallenge.DriverApp/Pages/DashboardPage.xaml
+++ b/DriverApp/ColdStartChallenge.DriverApp/ColdStartChallenge.DriverApp/Pages/DashboardPage.xaml
@@ -96,15 +96,55 @@
                          Grid.Row="1">
                 <CollectionView x:Name="DeliveryList"
                                 Margin="0,10,0,10"
-                                ItemsSource="{Binding Orders}"
-                                SelectedItem="{Binding SelectedOrder}"
-                                SelectionChangedCommand="{Binding ItemSelectedCommand}"
-                                SelectionMode="{Binding SelectionMode}">
+                                ItemsSource="{Binding Orders}">
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <Label Grid.Column="1"
-                               Text="{Binding User}"
-                               FontAttributes="Bold" />
+                            <Grid RowSpacing="5" Margin="0,0,0,5">
+                                <BoxView Margin="20,5,20,5"
+                                            CornerRadius="10"
+                                            Color="{StaticResource ColorPrimary}" />
+
+                                <Grid Margin="20,10,20,10">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*" />
+                                        <RowDefinition Height="*" />
+                                        <RowDefinition Height="Auto" />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="1.5*" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Label Grid.Row="0"
+                                            Grid.Column="0"
+                                            Margin="10,0,0,0"
+                                            Style="{DynamicResource TitleStyle}"
+                                            Text="{Binding User}" />
+                                    <Label Grid.Row="1"
+                                            Grid.Column="0"
+                                            Margin="10,0,0,0"
+                                            Style="{DynamicResource SubtitleStyle}"
+                                            Text="{Binding FullAddress}" />
+                                    <Label Grid.Row="2"
+                                            Grid.Column="1"
+                                            Margin="0,0,10,0"
+                                            HorizontalOptions="End"
+                                            Style="{DynamicResource CaptionStyle}"
+                                            Text="{Binding Date, StringFormat='{0:dd/MM/yyyy HH:mm:ss}'}" />
+
+                                    <Label Grid.Row="0"
+                                            Grid.RowSpan="2"
+                                            Grid.Column="1"
+                                            Margin="0,2,5,0"
+                                            HorizontalOptions="End"
+                                            Style="{StaticResource MaterialLabel}"
+                                            Text="{Binding StatusIcon}"
+                                            TextColor="{Binding StatusColor}" />
+                                </Grid>
+
+                                <Button Style="{StaticResource TransparentButton}"
+                                        Command="{Binding Source={x:Reference Dashboard}, Path=BindingContext.DeliveyItemSelectedCommand}"
+                                        CommandParameter="{Binding .}"/>
+                            </Grid>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
