--- a/DriverApp/ColdStartChallenge.DriverApp/ColdStartChallenge.DriverApp/Pages/DashboardPage.xaml
+++ b/DriverApp/ColdStartChallenge.DriverApp/ColdStartChallenge.DriverApp/Pages/DashboardPage.xaml
@@ -96,7 +96,10 @@
                          Grid.Row="1">
                 <CollectionView x:Name="DeliveryList"
                                 Margin="0,10,0,10"
-                                ItemsSource="{Binding Orders}">
+                                ItemsSource="{Binding Orders}"
+                                SelectedItem="{Binding SelectedOrder}"
+                                SelectionChangedCommand="{Binding ItemSelectedCommand }"
+                                SelectionMode="{Binding SelectionMode}">
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
                             <Grid RowSpacing="5" Margin="0,0,0,5">
@@ -149,6 +152,15 @@
                     </CollectionView.ItemTemplate>
                 </CollectionView>
             </RefreshView>
+
+            <!--<CollectionView x:Name="DeliveryList"
+                                Margin="0,10,0,10"
+                                ItemsSource="*** BIND TO CORRECT PROPERTY ***"
+                                SelectedItem="*** BIND TO CORRECT PROPERTY ***"
+                                SelectionChangedCommand="*** BIND TO CORRECT PROPERTY ***"
+                                SelectionMode="*** BIND TO CORRECT PROPERTY ***">
+            </CollectionView>-->
+
             <controls:LoadingView IsBusy="{Binding IsBusy}" />
         </Grid>
     </ContentPage.Content>
